# meteo

./: .gitignore  pyproject.toml
meteo/: Weather.py  main.py
tests/: test_meteo.py
